appId: com.bballtracker.mobile
---
- launchApp:
    clearState: true
# Skip onboarding carousel
- tapOn: "Skip"
# Now on login screen
- assertVisible: "Hooplings"
- tapOn: "Developer login with test users"
- assertVisible: "Select Test User"
- tapOn: "Frank Vogel.*"
- assertVisible: "Your Teams"
